--- a/Message Extension/Storyboards/Base.lproj/MessageExtension.storyboard
+++ b/Message Extension/Storyboards/Base.lproj/MessageExtension.storyboard
@@ -61,31 +61,10 @@
                                         <connections>
                                             <outlet property="placeholderView" destination="OdC-Rn-AuH" id="7O5-BA-KD7"/>
                                             <outlet property="stickerView" destination="jdh-Ws-RIn" id="v4i-hC-vdd"/>
-                                            <segue destination="zWP-2x-fud" kind="showDetail" identifier="EditStickerSegue" id="OFF-LG-fBC"/>
-                                        </connections>
-                                    </collectionViewCell>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="AddMoreCell" id="Iyb-XD-XMs" customClass="AddStickerCell" customModule="MessageExtension" customModuleProvider="target">
-                                        <rect key="frame" x="142.5" y="10" width="90" height="90"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="56" placeholderIntrinsicHeight="56" translatesAutoresizingMaskIntoConstraints="NO" id="zcV-wh-1zh">
-                                                    <rect key="frame" x="17" y="17" width="56" height="56"/>
-                                                    <accessibility key="accessibilityConfiguration">
-                                                        <accessibilityTraits key="traits" image="YES" notEnabled="YES"/>
-                                                    </accessibility>
-                                                </imageView>
-                                            </subviews>
-                                        </view>
-                                        <constraints>
-                                            <constraint firstItem="zcV-wh-1zh" firstAttribute="centerY" secondItem="Iyb-XD-XMs" secondAttribute="centerY" id="2HT-fA-tG8"/>
-                                            <constraint firstItem="zcV-wh-1zh" firstAttribute="centerX" secondItem="Iyb-XD-XMs" secondAttribute="centerX" id="VAc-Dh-qyj"/>
-                                        </constraints>
-                                        <connections>
-                                            <outlet property="imageView" destination="zcV-wh-1zh" id="VKP-Jl-t26"/>
-                                            <segue destination="zWP-2x-fud" kind="showDetail" identifier="AddStickerSegue" id="v44-oX-9hc"/>
+                                            <segue destination="zWP-2x-fud" kind="showDetail" identifier="EditStickerSegue" id="OFF-LG-fBC">
+                                                <segue key="commit" inheritsFrom="parent" id="uiV-QT-PRK"/>
+                                                <segue key="preview" inheritsFrom="commit" id="C4X-Iv-BeS"/>
+                                            </segue>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -103,6 +82,9 @@
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="waZ-5l-kM9" userLabel="AddButton">
                                                     <rect key="frame" x="187.5" y="0.0" width="187.5" height="50"/>
                                                     <state key="normal" title="Add"/>
+                                                    <connections>
+                                                        <segue destination="zWP-2x-fud" kind="showDetail" identifier="AddStickerSegue" id="XE3-ST-X8l"/>
+                                                    </connections>
                                                 </button>
                                             </subviews>
                                         </stackView>
@@ -381,6 +363,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="OFF-LG-fBC"/>
+        <segue reference="XE3-ST-X8l"/>
     </inferredMetricsTieBreakers>
 </document>
